@@ -295,6 +295,7 @@ $PALANG['pUsersMenu_edit_alias'] = 'Change your forward';
 $PALANG['pUsersMenu_password'] = 'Change Password';
 
 $PALANG['pUsersMain_vacation'] = 'Set an "out of office" message or auto responder for your mail.';
+$PALANG['pUsersMain_vacationSet'] = $PALANG['pUsersMenu_vacation'] . ' is ON, click \'' . $PALANG['pUsersMenu_vacation'] . '\' to ' . $PALANG['edit'] . '/remove';
 $PALANG['pUsersMain_edit_alias'] = 'Change your email forwarding.';
 $PALANG['pUsersMain_password'] = 'Change your current password.';
 
